--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">MyMascott</string>
     <string name="todo">TODO</string>
-    <string name="hi_i_started_off_with_my_special_ninja_move_come_on_explore_more_of_me">Hi. I started off with my special Ninja move. Come on, explore more of me.</string>
+    <string name="start_text">Hi. I started off with my special Ninja move. Come on, explore more of me.</string>
     <string name="swipe_bottom">That was Ninja swipe Bottom move.</string>
     <string name="swipe_left">That was Ninja swipe Left move.</string>
     <string name="swipe_right">That was Ninja swipe Right move.</string>
     <string name="swipe_top">That was Ninja swipe Top move.</string>
     <string name="double_tap">This double tap gets me rolling (literally).</string>
-    <string name="single_tap_coonfirmed">This makes me a little dizzy.</string>
+    <string name="single_tap_confirmed">This makes me a little dizzy.</string>
     <string name="long_pressed">Fading in and out from shadows like a ninja.</string>
+    <string name="prompt_an_event">Come on play with me, don\'t leave me hanging! It\'s been some time now.</string>
 
 </resources>
